--- a/bett.html
+++ b/bett.html
@@ -1,3 +1,4 @@
 <title>Separatist War-Battle of Front</title>
 <body background="http://molossia.org/pictures/paper2.jpg">
+<center><h1>Separatist War</h1></center>
 </body>
