--- a/bett.html
+++ b/bett.html
@@ -1,4 +1,18 @@
 <title>Separatist War-Battle of Front</title>
 <body background="http://molossia.org/pictures/paper2.jpg">
 <center><h1>Separatist War</h1></center>
+<table>
+<tr>
+<td>
+<img src="https://res.cloudinary.com/ddacu52sk/image/upload/w_30,l_150-1508275_history-swords-crossed-swords-crossed-icon-png-transparent__1_-removebg-preview_q4pg1i/v1604485025/sketch-1598019133061_jh8aoi.png"/>
+<br>
+<font size="-1">Battle Map</font>
+</td>
+<td>Azma Respublikasında
+            Mədəni və Elmi İşlər
+Azma Respublikası münaqişə və tanınmaqla yanaşı mədəni və elmi işlər də həyata keçirirdi.Respublika ərazisinin və əhalisinin öyrənilməsi mühüm vəzifə idi.Bunun üçün dərhal elmi işlərə başlandı.
+5 avqust 2020 tarixində ilk olaraq Respublika ərazisinin sahəsi və sərhədləri ölçüldü.Ölçmələrdən alınan nəticəyə görə Respublikanın Azərbaycanla sərhəddinin 413 metr, sahəsinin isə 10247 m² olduğu məlum oldu.
+Bir dövlətin əsas qanunları onun Konstutsiyasında göstərilir.Lakin Azma dövlətinin rəsmi konstutsiyası mövcud deyildi.Buna görə də 7 avqust 2020-ci ildə Dövlət Konstutsiyasının yaradılmasına başlandı.
+Separatçılarla münaqişələrdən bir neçə ay sonra, 18 oktyabr 2020-ci il tarixində ön qoruyucu divarda Azma Dövlət Bayrağı asıldı.Bu Azma Respublikasının Dövlətçiliyində bir ilk olaraq tarixə yazıldı.
+Ardından 13 noyabr 2020-də Respublika ərazisinin dəniz səviyyəsindən hündürlüyü ölçüldü və 1m olduğu məlum oldu.</td></tr></table>
 </body>
