--- a/bett.html
+++ b/bett.html
@@ -4,7 +4,7 @@
 <table>
 <tr>
 <td>
-<img src="https://res.cloudinary.com/ddacu52sk/image/upload/w_30,l_150-1508275_history-swords-crossed-swords-crossed-icon-png-transparent__1_-removebg-preview_q4pg1i/v1604485025/sketch-1598019133061_jh8aoi.png"/>
+<img src="http://www.molossia.org/war/map21.jpg"/>
 <br>
 <font size="-1">Battle Map</font>
 </td>
