--- a/bett.html
+++ b/bett.html
@@ -3,7 +3,7 @@
 <center><h1>Separatist War</h1></center>
 <table>
 <tr>
-<td>
+<td valign="top">
 <img src="http://www.molossia.org/war/map21.jpg"/>
 <br>
 <font size="-1">Battle Map</font>
