--- a/bett.html
+++ b/bett.html
@@ -4,7 +4,7 @@
 <table>
 <tr>
 <td valign="top">
-<img src="http://www.molossia.org/war/map21.jpg"/>
+<img src="http://www.molossia.org/war/map21sm.jpg"/>
 <br>
 <font size="-1">Battle Map</font>
 </td>
